--- a/app/scripts/components/MapFooter/map-footer-style.scss
+++ b/app/scripts/components/MapFooter/map-footer-style.scss
@@ -10,7 +10,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  background-color: $grayed-black;
+  background-color: $white;
   z-index: 100;
 
   & * {
