--- a/app/scripts/components/OtherVisualization/ToggleMenu/toggle-menu-style.scss
+++ b/app/scripts/components/OtherVisualization/ToggleMenu/toggle-menu-style.scss
@@ -44,13 +44,13 @@
 }
 
 .l-toggle-menu {
-  position: fixed;
+  position: absolute;
   width: 585px;
   z-index: 999;
   background-color: $white;
-  top: 168px; // Header height
+  top: rem(50); // Header height
   bottom: 26px; // footer height
-  left: 0;
+  // left: 0;
 }
 
 
@@ -76,7 +76,6 @@
 
 .ranking-content {
   box-shadow: inset -3px 0 0 0 rgba(0, 0, 0, 0.16);
-  background-color: #f3f3f3;
   flex: 1;
   overflow-y: auto;
 }
