basic styles for datasets page

--- a/app/scripts/components/Hero/hero-template.html
+++ b/app/scripts/components/Hero/hero-template.html
@@ -8,6 +8,7 @@
 
   <div v-if="location.playground">
     <div class="hero-app-content" v-if="!location.home">
+      <h1>API Highways data sets</h1>
       <search-component></search-component>
     </div>
   </div>
