--- a/app/scripts/components/Playground/playground-template.html
+++ b/app/scripts/components/Playground/playground-template.html
@@ -1,11 +1,11 @@
 <div class="c-playground">
   <article-component v-if="recentDatasets.length" grid-column="small-10 medium-10 small-offset-2 medium-offset-0">
-    <h1 class="-left">Recent Datasets</h1>
+    <h1>Recently viewed datasets</h1>
     <dataset-list-component :datasets="recentDatasets"></dataset-list-component>
   </article-component>
 
   <article-component grid-column="small-10 medium-10 small-offset-2 medium-offset-0">
-    <h1 class="-left">Featured Datasets</h1>
+    <h1>Featured Datasets</h1>
     <dataset-list-component :datasets="featuredDatasets"></dataset-list-component>
     <spinner-component class="-relative" :loading="featuresLoading"></spinner-component>
   </article-component>
