--- a/app/scripts/components/Search/search-template.html
+++ b/app/scripts/components/Search/search-template.html
@@ -1,10 +1,9 @@
-<div class="c-search row">
-      <div class="column small-10 medium-5 large-3 small-offset-1 filters-dropdown">
+      <!-- <div class="column small-10 medium-5 large-3 small-offset-1 filters-dropdown">
         <dropdown-component>
           <checkbox-component :items="filters" icon="icon-check"></checkbox-component>
         </dropdown-component>
-      </div>
-      <div class="column small-10 medium-6 large-7 small-offset-1 medium-offset-0 search-bar">
+      </div> -->
+      <div class="c-search">
           <input
             type="search"
             placeholder="Search for data..."
@@ -31,6 +30,5 @@
             </li>
           </ul>
       </div>
-</div>
 
 
