--- a/app/scripts/components/Dataset/dataset-style.scss
+++ b/app/scripts/components/Dataset/dataset-style.scss
@@ -2,6 +2,13 @@
 @import '../../../styles/variables';
 
 .c-dataset {
+  background-color: $white;
+  padding: rem(30);
+  margin-bottom: rem(60);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: rem(200);
 
   .dataset-header {
     margin: 0;
@@ -25,7 +32,7 @@
     display: flex;
 
     margin-top: ($small-margin / 2);
-    margin-bottom: $medium-margin;
+    // margin-bottom: $medium-margin;
     align-items: center;
 
     .dataset-link {
