--- a/app/scripts/components/Hero/hero-style.scss
+++ b/app/scripts/components/Hero/hero-style.scss
@@ -9,6 +9,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #f0f0f0;
+  width: 100%;
+
+  > div {
+    width: 100%;
+  }
 
   &.-home {
     background-image: url('/static/layouts/Back.jpg');
@@ -31,6 +37,7 @@
       max-width: rem(600);
       color: $white;
       position: relative;
+      margin: auto;
 
       &::before {
         content: "";
@@ -53,6 +60,10 @@
   }
 
   .hero-app-content {
-    padding: ($medium-margin * 3) 0;
+    padding-top: rem(100);
+
+    h1 {
+      margin-bottom: rem(60);
+    }
   }
 }
