--- a/app/scripts/components/Search/search-style.scss
+++ b/app/scripts/components/Search/search-style.scss
@@ -7,61 +7,66 @@ $checkbox-color: #aea6a6;
   display: flex;
   align-items: center;
   justify-content: space-around;
+  flex-direction: column;
+  background-color: $white;
+  box-shadow: 0 15px 50px -5px rgba(0, 0, 0, 0.25);
+  padding: rem(60);
+  max-width: rem(940);
+  width: 100%;
+  margin: auto;
+  margin-bottom: rem(-40);
 
   .filters-dropdown {
     z-index: 1;
   }
 
-  .search-bar {
+  .search-input {
     height: 60px;
     width: 100%;
+    padding: 0 $small-margin;
+    border-radius: 2px 2px 0 0;
+    border: 0;
+    outline: none;
+    font-size: rem(16);
+    border: solid 1px rgba(69, 69, 69, 0.5);
+  }
 
-    .search-input {
-      height: 100%;
-      width: 100%;
-      padding: 0 $small-margin;
-      border-radius: 2px 2px 0 0;
-      border: 0;
+  .search-results-list {
+    width: 100%;
+    max-height: 221px;
+    margin: 0;
+    margin-top: -1px;
+    padding: 0;
+    border-radius: 0 0 2px 2px;
+    border: solid 1px rgba(69, 69, 69, 0.5);
+    box-shadow: $box-shadow-1;
+    font-size: rem(16);
+
+    list-style: none;
+    overflow: overlay;
+    cursor: pointer;
+
+    .search-results-item {
+      padding:  $small-margin / 2 $medium-margin;
       outline: none;
-    }
 
-    .search-results-list {
-      width: 100%;
-      max-height: 221px;
-      margin: 0;
-      padding: 0;
-      border-radius: 0 0 2px 2px;
-      box-shadow: $box-shadow-1;
+      &.-error {
+        color: rgba(red, 0.5);
+        font-weight: $font-weight-bold;
+      }
 
-      background-color: $medium-grey;
-
-      list-style: none;
-      overflow: overlay;
-      cursor: pointer;
-
-      .search-results-item {
-        padding:  $small-margin / 2 $medium-margin;
-        outline: none;
-
-        &.-error {
-          color: rgba(red, 0.5);
-          font-weight: $font-weight-bold;
+      &.-item {
+        &:hover, &:focus {
+          background-color: $gold-yellow;
+          color: $theme-base;
         }
 
-        &.-item {
-          &:hover, &:focus {
-            background-color: $gold-yellow;
-            color: $theme-base;
-          }
-
-        }
       }
     }
+  }
 
-    @media (max-width: 639px) {
-      margin-top: $small-margin;
-    }
-
+  @media (max-width: 639px) {
+    margin-top: $small-margin;
   }
 
   .c-checkbox-group {
