fix css for sidebar

--- a/app/scripts/components/Header/header-style.scss
+++ b/app/scripts/components/Header/header-style.scss
@@ -85,6 +85,8 @@
       padding: 0 30px;
       color: $theme-alternative;
       font-weight: 300;
+      color: $dark-grey;
+
       &:first-child {
         padding-left: 0;
       }
