--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -1,9 +1,11 @@
 // Colors
 $black: #222222;
-$grayed-black: #292929;
+$dark-grey: #454545;
 $white: #FFFFFF;
 $theme-blue: #334285;
-$dark-grey: #2F2F2F;
+$gold-yellow: #f3b641;
+
+$grayed-black: #292929;
 $gold-yellow: #f3b641;
 $bright-yellow: #ffd722;
 $lightgrey: #F3F3F3;
