--- a/app/scripts/components/Home/home-template.html
+++ b/app/scripts/components/Home/home-template.html
@@ -5,7 +5,7 @@
     <div class="row expanded">
 
       <div class="column small-12 medium-6 info-column">
-        <icon-component class="-round -large -base" name="icon-hub"></icon-component>
+        <icon-component class="-round -large" name="icon-hub"></icon-component>
         <div class="info-column-text">
           <h3>Developer-friendly, application-ready</h3>
           <p>We bring high-value data sets and APIs from government, NGO, and private sector organizations into a single infrastructure. This gives developers familiar and standardized APIs and tools to create visualizations and applications on top of SDG-related data.</p>
@@ -13,7 +13,7 @@
       </div>
 
       <div class="column small-12 medium-6 info-column">
-        <icon-component class="-round -large -base" name="icon-community"></icon-component>
+        <icon-component class="-round -large" name="icon-community"></icon-component>
         <div class="info-column-text">
           <h3>An open source developer community</h3>
           <p>
@@ -23,7 +23,7 @@
       </div>
 
       <div class="column small-12 medium-6 info-column">
-        <icon-component class="-round -large -base" name="icon-laptop"></icon-component>
+        <icon-component class="-round -large" name="icon-laptop"></icon-component>
         <div class="info-column-text">
         <h3>Data discoverability</h3>
         <p>We are growing a network of machine-readable, application-ready API-enabled data from a wealth of government, private, and NGO sources. All data is easily searchable and contextually linked using our Knowledge Graph.</p>
@@ -31,7 +31,7 @@
       </div>
 
       <div class="column small-12 medium-6 info-column">
-        <icon-component class="-round -large -base" name="icon-settings"></icon-component>
+        <icon-component class="-round -large" name="icon-settings"></icon-component>
         <div class="info-column-text">
         <h3>Use case development</h3>
         <p>Through a “network of networks” approach, API Highways seeks to make your data more accessible, facilitate code-sharing and community development, and re-purpose projects across new regions and contexts.</p>
@@ -45,7 +45,7 @@
     <div class="row">
 
       <div class="column small-6 medium-8 align-middle">
-        <h3 class="-light">Start Collecting, Visualising & Monitoring Data the Right way.</h3>
+        <h3 class="-light">Start collecting, visualising & monitoring data the right way.</h3>
       </div>
 
       <div class="-center column small-6 medium-4">
