--- a/app/scripts/components/Landing/Footer/template.html
+++ b/app/scripts/components/Landing/Footer/template.html
@@ -8,7 +8,7 @@
       </ul>
     </div>
     <a href="/">
-      <img src="/static/logos/logo-dark.png" alt="SDG logo">
+      <icon-component name="icon-logo-dark-bg" class="logo"></icon-component>
     </a>
   </div>
 </div>
