change logos to svgs

--- a/app/scripts/components/Footer/footer-style.scss
+++ b/app/scripts/components/Footer/footer-style.scss
@@ -30,7 +30,10 @@
   }
 
   .sdg-logo {
-    max-width: 213px;
+    max-height: 70px;
+    svg {
+      max-height: 70px;
+    }
   }
 
   .rw-logo {
