--- a/app/scripts/components/Header/header-template.html
+++ b/app/scripts/components/Header/header-template.html
@@ -3,7 +3,7 @@
     <div class="header-wrapper">
 
       <router-link to="/" class="header-logo">
-        <img :src="d4sdgLogo">
+        <icon-component name="logo-api-highways"></icon-component>
       </router-link>
 
       <nav class="nav -primary">
