--- a/app/scripts/components/Footer/footer-template.html
+++ b/app/scripts/components/Footer/footer-template.html
@@ -4,16 +4,9 @@
       <div class="footer-link-section">
         <li>
           <a href="http://www.data4sdgs.org/" target="_blank">
-            <img src="/static/logos/global_partnership_sdg.png" class="sdg-logo">
+            <icon-component name="logo-global-partnership" class="sdg-logo"></icon-component>
           </a>
         </li>
-
-        <!-- <li>
-          <span class="footnote">Powered by:</span>
-          <a href="http://resourcewatch.org/" target="_blank">
-            <img src="/static/logos/logoRW.png" class="rw-logo">
-          </a>
-        </li> -->
       </div>
       <li>
         <a href="http://www.vizzuality.com/" target="_blank">
