--- a/app/scripts/components/Landing/Footer/template.html
+++ b/app/scripts/components/Landing/Footer/template.html
@@ -8,7 +8,7 @@
       </ul>
     </div>
     <a href="/">
-      <icon-component name="icon-logo-dark-bg" class="logo"></icon-component>
+      <icon-component name="logo-dark-bg" class="logo"></icon-component>
     </a>
   </div>
 </div>
