fix header styles and menu heights

--- a/app/scripts/components/Map/map-style.scss
+++ b/app/scripts/components/Map/map-style.scss
@@ -95,6 +95,7 @@ $bubble-cluster-font-color: $white;
   border-radius: 100%;
   color: $bubble-cluster-font-color !important;
   font-weight: 700!important;
+  font-family: $base-font-family;
   font-size: 12px;
   padding: 10px;
   background-color: rgba($bubble-cluster-color, 0.9);
