--- a/app/scripts/components/Header/header-style.scss
+++ b/app/scripts/components/Header/header-style.scss
@@ -3,48 +3,38 @@
 
 .c-header{
   position: relative;
+  box-shadow: 0 0 15px -2px rgba(0, 0, 0, 0.15);
   a {
     color: inherit;
   }
 
   .header-section {
+    .header-wrapper {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin: auto;
+      max-width: 71em;
+      height: 100%;
+    }
     &.-lead {
-      padding: $medium-margin 0;
-      box-shadow: 0 0 15px -2px rgba(0, 0, 0, 0.15);
-      .header-wrapper {
-        justify-content: space-between;
-      }
+      padding: 15px 0;
     }
     &.-secondary {
-      padding: 14px 0;
       display: none;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 100px;
+      height: 50px;
+      background: rgba($white, 0.9);
+      border-top: solid 1px rgba($black, 0.1);
+      z-index: 1000;
+
       .header-wrapper {
         justify-content: flex-end;
       }
     }
-    .-over & {
-      &.-lead {
-        padding-top: rem(18);
-        padding-bottom: rem(18);
-      }
-      &.-secondary {
-        display: block;
-        background-color: $white;
-        opacity: 0.9;
-        position: absolute;
-        bottom: rem(-50);
-        left: 0;
-        right: 0;
-        z-index: 1000;
-      }
-    }
-  }
-
-  .header-wrapper {
-    max-width: 71rem;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
   }
 }
 
