Remove year range from water risk visualisation title

--- a/app/scripts/components/OtherVisualization/ToggleMenu/toggle-menu-template.html
+++ b/app/scripts/components/OtherVisualization/ToggleMenu/toggle-menu-template.html
@@ -4,7 +4,7 @@
     <span></span>
   </button>
   <div class="c-ranking">
-    <h2 class="ranking-title">Regions of South Africa with greatest water risk (2010-2015)</h2>
+    <h2 class="ranking-title">Regions of South Africa with greatest water risk</h2>
     <div class="ranking-content">
       <table class="ranking-table">
         <thead>
