fix not found message

--- a/app/scripts/components/Search/search-template.html
+++ b/app/scripts/components/Search/search-template.html
@@ -13,10 +13,9 @@
       >
       <icon-component class="search-icon -round -medium" name="icon-search"></icon-component>
     </div>
-    <ul v-if="isOpen" class="search-results-list" ref="search-results-list">
+    <ul v-if="isOpen && results.length > 0" class="search-results-list" ref="search-results-list">
       <li v-if="loading" class="search-results-item">{{loadingMessage}}</li>
       <li v-else-if="error" class="search-results-item -error">{{errorMessage}}</li>
-      <li v-else-if="notFound" class="search-results-item">{{notFoundMessage}}</li>
       <li
         tabindex="-1"
         class="search-results-item -item js-search-results-item"
