--- a/app/scripts/components/Search/search-style.scss
+++ b/app/scripts/components/Search/search-style.scss
@@ -24,7 +24,7 @@ $checkbox-color: #aea6a6;
       width: 100%;
       height: 60px;
       position: absolute;
-      padding: 0 $small-margin;
+      padding: 0 $medium-margin;
       border-radius: 2px 2px 0 0;
       border: 0;
       outline: none;
