--- a/app/scripts/components/Header/header-style.scss
+++ b/app/scripts/components/Header/header-style.scss
@@ -14,7 +14,7 @@
       align-items: center;
       justify-content: space-between;
       margin: auto;
-      max-width: 71em;
+      // max-width: 71em;
       height: 100%;
     }
     &.-lead {
