--- a/app/scripts/components/Hero/hero-template.html
+++ b/app/scripts/components/Hero/hero-template.html
@@ -9,7 +9,11 @@
   <div v-if="location.playground">
     <div class="hero-app-content" v-if="!location.home">
       <h1>API Highways data sets</h1>
-      <search-component></search-component>
+      <div class="row">
+        <div class="column small-12 medium-10 medium-offset-1">
+          <search-component></search-component>
+        </div>
+      </div>
     </div>
   </div>
 
