--- a/app/scripts/components/Playground/playground-template.html
+++ b/app/scripts/components/Playground/playground-template.html
@@ -5,12 +5,18 @@
     <dataset-list-component :datasets="recentDatasets"></dataset-list-component>
   </article-component> -->
 
-  <article-component grid-column="small-10 medium-10 small-offset-2 medium-offset-1 data-sets">
-    <h1>Browse Datasets</h1>
-    <div class="filters-dropdown">
-      <dropdown-component>
-        <checkbox-component :items="filters" icon="icon-check"></checkbox-component>
-      </dropdown-component>
+  <article-component grid-column="column small-12 data-sets">
+    <div class="row">
+      <div class="column small-12 medium-4 medium-offset-4">
+        <h1>Browse Datasets</h1>
+      </div>
+      <div class="column small-12 medium-3 medium-offset-1">
+        <div class="filters-dropdown">
+          <dropdown-component>
+            <checkbox-component :items="filters" icon="icon-check"></checkbox-component>
+          </dropdown-component>
+        </div>
+      </div>
     </div>
     <dataset-list-component :datasets="searchDatasets"></dataset-list-component>
     <spinner-component class="-absolute" :loading="searchLoading"></spinner-component>
