--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -4,6 +4,7 @@ $dark-grey: #454545;
 $white: #FFFFFF;
 $theme-blue: #334285;
 $gold-yellow: #f3b641;
+$alt-blue: #007fae;
 
 $grayed-black: #292929;
 $gold-yellow: #f3b641;
