--- a/app/scripts/components/DatasetList/dataset-list-style.scss
+++ b/app/scripts/components/DatasetList/dataset-list-style.scss
@@ -1,3 +1,30 @@
+@import '../../../styles/variables';
+
 .c-dataset-list {
   // min-height: 400px;
+
+  .pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+
+    li {
+      background: #f1f1f1;
+
+      a {
+        width: rem(45);
+        height: rem(45);
+        color: $alt-blue;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: $base-font-family;
+      }
+
+      &.active {
+        background-color: $white;
+      }
+    }
+  }
 }
