--- a/app/scripts/components/Search/search-template.html
+++ b/app/scripts/components/Search/search-template.html
@@ -14,9 +14,10 @@
       <icon-component class="search-icon -round -medium" name="icon-search"></icon-component>
     </div>
     <ul v-if="isOpen && results.length > 0" class="search-results-list" ref="search-results-list">
-      <li v-if="loading" class="search-results-item">{{loadingMessage}}</li>
-      <li v-else-if="error" class="search-results-item -error">{{errorMessage}}</li>
+      <li v-if="loading" class="search-results-item">Searching...</li>
+      <li v-else-if="error" class="search-results-item -error">No datasets found</li>
       <li
+        v-if="!loading"
         tabindex="-1"
         class="search-results-item -item js-search-results-item"
         v-for="(result, index) in results"
