--- a/app/scripts/components/Footer/footer-template.html
+++ b/app/scripts/components/Footer/footer-template.html
@@ -1,18 +1,20 @@
 <div class="c-footer">
-  <div class="footer-wrapper">
-    <ul class="footer-links">
-      <div class="footer-link-section">
+  <div class="row">
+    <div class="column small-12">
+      <ul class="footer-links">
+        <div class="footer-link-section">
+          <li>
+            <a href="http://www.data4sdgs.org/" target="_blank">
+              <icon-component name="logo-global-partnership" class="sdg-logo"></icon-component>
+            </a>
+          </li>
+        </div>
         <li>
-          <a href="http://www.data4sdgs.org/" target="_blank">
-            <icon-component name="logo-global-partnership" class="sdg-logo"></icon-component>
+          <a href="http://www.vizzuality.com/" target="_blank">
+            <icon-component name="icon-vizz" class="vizz-logo"></icon-component>
           </a>
         </li>
-      </div>
-      <li>
-        <a href="http://www.vizzuality.com/" target="_blank">
-          <icon-component name="icon-vizz" class="vizz-logo"></icon-component>
-        </a>
-      </li>
-    </ul>
+      </ul>
+    </div>
   </div>
 </div>
