--- a/app/scripts/components/Landing/Footer/template.html
+++ b/app/scripts/components/Landing/Footer/template.html
@@ -1,14 +1,16 @@
 <div class="c-landing-footer">
-  <div class="landing-wrapper -footer">
-    <div class="footer-info">
-      <ul class="footer-links">
-        <li><a href="http://www.data4sdgs.org" target="_blank">www.data4sdgs.org</a></li>
-        <li><a href="mailto:info@Data4SDGS.org">info@Data4SDGS.org</a></li>
-        <li><a href="https://twitter.com/hashtag/data4sdgs" target="_blank">#data4sdgs</a></li>
-      </ul>
+  <div class="row">
+    <div class="column small-12">
+      <div class="footer-wrapper">
+        <ul class="footer-links">
+          <li><a href="http://www.data4sdgs.org" target="_blank">www.data4sdgs.org</a></li>
+          <li><a href="mailto:info@Data4SDGS.org">info@Data4SDGS.org</a></li>
+          <li><a href="https://twitter.com/hashtag/data4sdgs" target="_blank">#data4sdgs</a></li>
+        </ul>
+        <a href="/">
+          <icon-component name="logo-dark-bg" class="logo"></icon-component>
+        </a>
+      </div>
     </div>
-    <a href="/">
-      <icon-component name="logo-dark-bg" class="logo"></icon-component>
-    </a>
   </div>
 </div>
