--- a/app/scripts/components/Header/header-style.scss
+++ b/app/scripts/components/Header/header-style.scss
@@ -13,8 +13,6 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      margin: auto;
-      // max-width: 71em;
       height: 100%;
     }
     &.-lead {
@@ -33,6 +31,7 @@
 
       .header-wrapper {
         justify-content: flex-end;
+        height: 50px;
       }
     }
   }
