update console pills style

--- a/app/scripts/components/Banner/banner-style.scss
+++ b/app/scripts/components/Banner/banner-style.scss
@@ -35,6 +35,14 @@
     }
   }
 
+  .c-button {
+    color: $white;
+
+    &:hover {
+      color: $white;
+    }
+  }
+
   @keyframes appear {
     0% { transform: translateY(100%) }
     100% { transform: translateY(0) }
