--- a/app/scripts/components/Console/console-template.html
+++ b/app/scripts/components/Console/console-template.html
@@ -1,7 +1,7 @@
 <div class="c-console">
   <div class="row expanded">
     <div class="column small-12 align-middle flex">
-      <dataset-component :dataset="selectedDataset" large></dataset-component>
+      <dataset-component class="modal-dataset" :dataset="selectedDataset" large></dataset-component>
     </div>
   </div>
   <div class="row column console">
