--- a/app/scripts/components/Modal/modal-style.scss
+++ b/app/scripts/components/Modal/modal-style.scss
@@ -35,13 +35,13 @@
     outline: none;
     padding: 0px;
     margin: auto;
-    // max-width: 71em;
   }
 
   .close-modal {
     position: absolute;
-    right: 0;
-    top: 0;
+    right: rem(20);
+    top: rem(20);
+    z-index: 1;
   }
 
   .modal-content {
