--- a/app/scripts/components/Dataset/dataset-style.scss
+++ b/app/scripts/components/Dataset/dataset-style.scss
@@ -10,6 +10,19 @@
   justify-content: space-between;
   min-height: rem(200);
 
+  &.modal-dataset {
+    padding: 0;
+    justify-content: flex-start;
+    min-height: 0;
+    margin-bottom: rem(50);
+
+    h2 {
+      margin-bottom: rem(10);
+      text-transform: uppercase;
+      font-family: $heading-font-family;
+    }
+  }
+
   .dataset-header {
     margin: 0;
 
