--- a/app/scripts/components/Console/console-template.html
+++ b/app/scripts/components/Console/console-template.html
@@ -4,13 +4,20 @@
       <dataset-component class="modal-dataset" :dataset="selectedDataset" large></dataset-component>
     </div>
   </div>
-  <div class="row column console">
-  <div class="tab-bar">
-    <div v-for="lang in languages" :class="classList(lang)" @click.stop="setDisplayedLang(lang)">{{lang}}</div>
+  <div class="row column">
+    <div class="data-link">
+      <a href="">
+        <icon-component name="icon-link" class="-small"></icon-component>
+        See data source
+      </a>
+    </div>
   </div>
-
-  <pre class="console-content">
-    <code ref="snippet">{{snippet}}</code>
-  </pre>
+  <div class="row column console">
+    <div class="tab-bar">
+      <div v-for="lang in languages" :class="classList(lang)" @click.stop="setDisplayedLang(lang)">{{lang}}</div>
+    </div>
+    <pre class="console-content">
+      <code ref="snippet">{{snippet}}</code>
+    </pre>
   </div>
 </div>
