--- a/app/scripts/components/Console/console-template.html
+++ b/app/scripts/components/Console/console-template.html
@@ -4,7 +4,15 @@
       <dataset-component class="modal-dataset" :dataset="selectedDataset" large></dataset-component>
     </div>
   </div>
-  <div class="row column">
+  <div class="editor-header">
+    <div class="tab-panel">
+      <div :class="{'tab':true, 'active': tab === 'code' }" v-on:click="setTab('code')">
+        Code examples
+      </div>
+      <div :class="{'tab':true, 'active': tab === 'meta' }" v-on:click="setTab('meta')">
+        Metadata
+      </div>
+    </div>
     <div class="data-link">
       <a href="">
         <icon-component name="icon-link" class="-small"></icon-component>
@@ -14,7 +22,8 @@
   </div>
   <div class="row column console">
     <div class="tab-bar">
-      <div v-for="lang in languages" :class="classList(lang)" @click.stop="setDisplayedLang(lang)">{{lang}}</div>
+      <div v-if="tab === 'code'" v-for="lang in codeLanguages" :class="classListCode(lang)" @click.stop="setDisplayedCodeLang(lang)">{{lang}}</div>
+      <div v-if="tab === 'meta'" v-for="lang in languages" :class="classList(lang)" @click.stop="setDisplayedLang(lang)">{{lang}}</div>
     </div>
     <pre class="console-content">
       <code ref="snippet">{{snippet}}</code>
